tests/fat/snapshots/fat__test_patching__change_dylib_id-4.snap
---
source: tests/fat/test_patching.rs
expression: changed_macho.name
---
Some(
    "very_very_very_very_very_very_very_longid.dylib",
)
