tests/fat/snapshots/fat__test_patching__change_dylib_name-2.snap
---
source: tests/fat/test_patching.rs
expression: changed_macho.libs
---
[
    "self",
    "very_very_very_very_very_very_very_longid",
]
